add the main page

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,65 @@
 	<div class="wrapper">
 		@@include('html/_header.html',{})
 		<main class="page">
-
+			<section class="page__main main-page">
+				<div class="main-page__container _container">
+					<h1 class="main-page__title _title-h1">
+						Петербургский теннисный клуб имени <span>М.А. Пасечникова</span>
+					</h1>
+					<div class="main-page__video main-video">
+						<div class="main-video__play">
+							<div class="main-video__button">
+								<div class="main-video__arrow"></div>
+							</div>
+						</div>
+						<div class="main-video__text">
+							Посмотрите видео о нашем клубе
+						</div>
+					</div>
+					<div class="main-page__information main-information">
+						<div class="main-information__item">
+							<div class="main-information__container">
+								<div class="main-information__category">Услуги</div>
+								<div class="main-information__name">
+									<div class="main-information__text">Аренда корта</div>
+									<a href="#" class="main-information__link _icon-link"></a>
+								</div>
+							</div>
+						</div>
+						<div class="main-information__item">
+							<div class="main-information__container">
+								<div class="main-information__category">Услуги</div>
+								<div class="main-information__name">
+									<div class="main-information__text">Детский теннис</div>
+									<a href="#" class="main-information__link _icon-link"></a>
+								</div>
+							</div>
+						</div>
+						<div class="main-information__item">
+							<div class="main-information__container">
+								<div class="main-information__category">Услуги</div>
+								<div class="main-information__name">
+									<div class="main-information__text">Сборы команд</div>
+									<a href="#" class="main-information__link _icon-link"></a>
+								</div>
+							</div>
+						</div>
+						<div class="main-information__item">
+							<div class="main-information__container">
+								<div class="main-information__category">Турниры</div>
+								<div class="main-information__name">
+									<div class="main-information__text">Расписание</div>
+									<a href="#" class="main-information__link _icon-link"></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="main-page__background _ibg">
+					<img src="img/header.jpg" alt="Фоновая картинка">
+				</div>
+				<div class="main-page__gradient"></div>
+			</section>
 		</main>
 		@@include('html/_footer.html',{})
 	</div>
