--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -1,2 +1,22 @@
-<footer>
+<footer class="footer">
+	<div class="footer__container _container">
+		<div class="footer__license">2022 © Все права защищены.</div>
+		<nav class="footer__menu menu-footer">
+			<ul class="menu-footer__list">
+				<li><a href="#" class="menu-footer__link">Главная</a></li>
+				<li><a href="#" class="menu-footer__link">Новости</a></li>
+				<li><a href="#" class="menu-footer__link">Турниры</a></li>
+				<li><a href="#" class="menu-footer__link">Услуги</a></li>
+				<li><a href="#" class="menu-footer__link">Детский теннис</a></li>
+				<li><a href="#" class="menu-footer__link">Контакты</a></li>
+				<li><a href="#" class="menu-footer__link">Цены</a></li>
+				<li><a href="#" class="menu-footer__link">О клубе</a></li>
+			</ul>
+		</nav>
+		<div class="footer__contacts">
+			<a href="#" class="footer__contact footer__contact_youtube _icon-youtube"></a>
+			<a href="#" class="footer__contact footer__contact_vk _icon-vk"></a>
+			<a href="#" class="footer__contact footer__contact_tg _icon-tg"></a>
+		</div>
+	</div>
 </footer>
