add the corts-block

--- a/src/index.html
+++ b/src/index.html
@@ -65,8 +65,47 @@
 				<div class="main-page__background _ibg">
 					<img src="img/header.jpg" alt="Фоновая картинка">
 				</div>
-				<div class="main-page__gradient"></div>
+				<div class="_gradient"></div>
 			</section>
+			<div class="page__corts corts-block">
+				<div class="corts-block__container _container">
+					<div class="corts-block__wrapper">
+						<div class="corts-block__cort">
+							<div class="corts-block__image _ibg">
+								<img src="img/corts/cort1.jpg" alt="Первый корт">
+								<label class="corts-block__label">
+									<div class="corts-block__text">
+										5 летних грунтовых кортов
+									</div>
+								</label>
+							</div>
+							<div class="_gradient"></div>
+						</div>
+						<div class="corts-block__cort">
+							<div class="corts-block__image _ibg">
+								<img src="img/corts/cort2.jpg" alt="Первый корт">
+								<label class="corts-block__label">
+									<div class="corts-block__text">
+										Зал с покрытием “Искусственная трава”
+									</div>
+								</label>
+							</div>
+							<div class="_gradient"></div>
+						</div>
+						<div class="corts-block__cort">
+							<div class="corts-block__image _ibg">
+								<img src="img/corts/cort3.jpg" alt="Первый корт">
+								<label class="corts-block__label">
+									<div class="corts-block__text">
+										Зал с покрытием “Хард”
+									</div>
+								</label>
+							</div>
+							<div class="_gradient"></div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		@@include('html/_footer.html',{})
 	</div>
