--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,65 @@
 					</div>
 				</div>
 			</div>
+			<div class="page__club club-block">
+				<div class="club-block__container _container">
+					<div class="club-block__wrapper">
+						<div class="club-block__history club-history">
+							<div class="club-history__container">
+								<h2 class="club-history__title _title-h2">
+									Спортивный клуб
+								</h2>
+								<div class="club-history__text">
+									<p>
+										Imperdiet lorem ipsum, pulvinar aliquet sit ultricies in sit turpis. Ultricies erat
+										pretium
+										risus quam tincidunt non viverra porttitor. Sollicitudin enim nunc in nisi donec vel.
+										Blandit
+										mauris vitae amet aliquet ultrices mauris pellentesque. Non ipsum commodo, sit mi sit
+										netus
+										aenean nisl. ]Donec sit pellentesque enim, vestibulum.
+									</p>
+									<p>
+										Condimentum hac adipiscing purus in augue nisi. Convallis ut nisi.
+									</p>
+								</div>
+								<h3 class="club-history__subtitle _title-h3">
+									Ornare orci ut dictum nulla fames.
+								</h3>
+								<ul class="club-history__list">
+									<li class="club-history__item">
+										<p>
+											Euismod diam, vel venenatis bibendum sodales sem hendrerit vulputate sagittis.
+										</p>
+									</li>
+									<li class="club-history__item">
+										<p>
+											Nisl senectus sed malesuada donec. Interdum malesuada bibendum imperdiet elementum
+											auctor vitae in.
+										</p>
+									</li>
+									<li class="club-history__item">
+										<p>
+											Quam purus ornare dictum pharetra. Sed viverra tellus sollicitudin urna, sagittis.
+										</p>
+									</li>
+									<li class="club-history__item">
+										<p>
+											Scelerisque urna senectus commodo, nam. Donec nibh tempus imperdiet nisi, tincidunt mus
+											egestas nisl nullam.
+										</p>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="club-block__picture">
+							<div class="club-block__image _ibg">
+								<img src="img/sportClub.jpg" alt="Теннесист бьет по мячу">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		@@include('html/_footer.html',{})
 	</div>
