--- a/src/index.html
+++ b/src/index.html
@@ -165,6 +165,179 @@
 					</div>
 				</div>
 			</div>
+			<section class="page__coaches coaches-page">
+				<div class="coaches-page__container _container">
+					<div class="coaches-page__head">
+						<h2 class="coaches-page__title _title-h2">Тренерский состав</h2>
+						<div class="coaches-page__arrows">
+							<div class="coaches-page__arrow coaches-page__arrow_prev _icon-arrow"></div>
+							<div class="coaches-page__arrow coaches-page__arrow_next _icon-arrow"></div>
+						</div>
+					</div>
+					<div class="coaches-page__slider coaches-slider swiper">
+						<div class="coaches-slider__wrapper swiper-wrapper">
+							<div class="coaches-slider__item swiper-slide">
+								<div class="coaches-slider__picture">
+									<div class="coaches-slider__image _ibg">
+										<img src="img/coaches/coach1.jpg" alt="Фотография тренера">
+									</div>
+								</div>
+								<div class="coaches-slider__content">
+									<h3 class="coaches-slider__name _title-h3">Pulvinar <br> aliquam</h3>
+									<div class="coaches-slider__description">
+										Arcu elit massa amet turpis vel consequat pellentesque sit.
+									</div>
+								</div>
+							</div>
+							<div class="coaches-slider__item swiper-slide">
+								<div class="coaches-slider__picture">
+									<div class="coaches-slider__image _ibg">
+										<img src="img/coaches/coach2.jpg" alt="Фотография тренера">
+									</div>
+								</div>
+								<div class="coaches-slider__content">
+									<h3 class="coaches-slider__name _title-h3">Pretium <br> odio</h3>
+									<div class="coaches-slider__description">
+										Bibendum aliquam volutpat nisl a duis in nisi. In sed commodo lorem morbi quis.
+									</div>
+								</div>
+							</div>
+							<div class="coaches-slider__item swiper-slide">
+								<div class="coaches-slider__picture">
+									<div class="coaches-slider__image _ibg">
+										<img src="img/coaches/coach3.jpg" alt="Фотография тренера">
+									</div>
+								</div>
+								<div class="coaches-slider__content">
+									<h3 class="coaches-slider__name _title-h3">Aliquet <br> consectetur</h3>
+									<div class="coaches-slider__description">
+										Id sapien sed nibh fermentum massa posuere ipsum. Diam in.
+									</div>
+								</div>
+							</div>
+							<div class="coaches-slider__item swiper-slide">
+								<div class="coaches-slider__picture">
+									<div class="coaches-slider__image _ibg">
+										<img src="img/coaches/coach4.jpg" alt="Фотография тренера">
+									</div>
+								</div>
+								<div class="coaches-slider__content">
+									<h3 class="coaches-slider__name _title-h3">Blandit <br> augue</h3>
+									<div class="coaches-slider__description">
+										Scelerisque accumsan pretium justo, vitae elit. Dolor semper morbi sit auctor vel diam
+										eros.
+									</div>
+								</div>
+							</div>
+							<div class="coaches-slider__item swiper-slide">
+								<div class="coaches-slider__picture">
+									<div class="coaches-slider__image _ibg">
+										<img src="img/coaches/coach5.jpg" alt="Фотография тренера">
+									</div>
+								</div>
+								<div class="coaches-slider__content">
+									<h3 class="coaches-slider__name _title-h3">Lorem <br> lacus</h3>
+									<div class="coaches-slider__description">
+										Adipiscing amet, viverra dignissim egestas. Sed nibh egestas venenatis faucibus.
+									</div>
+								</div>
+							</div>
+							<div class="coaches-slider__item swiper-slide">
+								<div class="coaches-slider__picture">
+									<div class="coaches-slider__image _ibg">
+										<img src="img/coaches/coach6.jpg" alt="Фотография тренера">
+									</div>
+								</div>
+								<div class="coaches-slider__content">
+									<h3 class="coaches-slider__name _title-h3">Sed <br> erat</h3>
+									<div class="coaches-slider__description">
+										Quis ullamcorper pretium lacus risus tellus dolor etiam.
+									</div>
+								</div>
+							</div>
+							<div class="coaches-slider__item swiper-slide">
+								<div class="coaches-slider__picture">
+									<div class="coaches-slider__image _ibg">
+										<img src="img/coaches/coach1.jpg" alt="Фотография тренера">
+									</div>
+								</div>
+								<div class="coaches-slider__content">
+									<h3 class="coaches-slider__name _title-h3">Pulvinar <br> aliquam</h3>
+									<div class="coaches-slider__description">
+										Arcu elit massa amet turpis vel consequat pellentesque sit.
+									</div>
+								</div>
+							</div>
+							<div class="coaches-slider__item swiper-slide">
+								<div class="coaches-slider__picture">
+									<div class="coaches-slider__image _ibg">
+										<img src="img/coaches/coach2.jpg" alt="Фотография тренера">
+									</div>
+								</div>
+								<div class="coaches-slider__content">
+									<h3 class="coaches-slider__name _title-h3">Pretium <br> odio</h3>
+									<div class="coaches-slider__description">
+										Bibendum aliquam volutpat nisl a duis in nisi. In sed commodo lorem morbi quis.
+									</div>
+								</div>
+							</div>
+							<div class="coaches-slider__item swiper-slide">
+								<div class="coaches-slider__picture">
+									<div class="coaches-slider__image _ibg">
+										<img src="img/coaches/coach3.jpg" alt="Фотография тренера">
+									</div>
+								</div>
+								<div class="coaches-slider__content">
+									<h3 class="coaches-slider__name _title-h3">Aliquet <br> consectetur</h3>
+									<div class="coaches-slider__description">
+										Id sapien sed nibh fermentum massa posuere ipsum. Diam in.
+									</div>
+								</div>
+							</div>
+							<div class="coaches-slider__item swiper-slide">
+								<div class="coaches-slider__picture">
+									<div class="coaches-slider__image _ibg">
+										<img src="img/coaches/coach4.jpg" alt="Фотография тренера">
+									</div>
+								</div>
+								<div class="coaches-slider__content">
+									<h3 class="coaches-slider__name _title-h3">Blandit <br> augue</h3>
+									<div class="coaches-slider__description">
+										Scelerisque accumsan pretium justo, vitae elit. Dolor semper morbi sit auctor vel diam
+										eros.
+									</div>
+								</div>
+							</div>
+							<div class="coaches-slider__item swiper-slide">
+								<div class="coaches-slider__picture">
+									<div class="coaches-slider__image _ibg">
+										<img src="img/coaches/coach5.jpg" alt="Фотография тренера">
+									</div>
+								</div>
+								<div class="coaches-slider__content">
+									<h3 class="coaches-slider__name _title-h3">Lorem <br> lacus</h3>
+									<div class="coaches-slider__description">
+										Adipiscing amet, viverra dignissim egestas. Sed nibh egestas venenatis faucibus.
+									</div>
+								</div>
+							</div>
+							<div class="coaches-slider__item swiper-slide">
+								<div class="coaches-slider__picture">
+									<div class="coaches-slider__image _ibg">
+										<img src="img/coaches/coach6.jpg" alt="Фотография тренера">
+									</div>
+								</div>
+								<div class="coaches-slider__content">
+									<h3 class="coaches-slider__name _title-h3">Sed <br> erat</h3>
+									<div class="coaches-slider__description">
+										Quis ullamcorper pretium lacus risus tellus dolor etiam.
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		@@include('html/_footer.html',{})
 	</div>
