--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -4,7 +4,7 @@
 		<nav class="footer__menu menu-footer">
 			<ul class="menu-footer__list">
 				<li><a href="#" class="menu-footer__link">Главная</a></li>
-				<li><a href="#" class="menu-footer__link">Новости</a></li>
+				<li><a href="news.html" class="menu-footer__link">Новости</a></li>
 				<li><a href="#" class="menu-footer__link">Турниры</a></li>
 				<li><a href="#" class="menu-footer__link">Услуги</a></li>
 				<li><a href="#" class="menu-footer__link">Детский теннис</a></li>
