--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -6,7 +6,7 @@
 				<nav class="menu__body">
 					<ul class="menu__list">
 						<li><a href="#" class="menu__link">Главная</a></li>
-						<li><a href="#" class="menu__link">Новости</a></li>
+						<li><a href="news.html" class="menu__link">Новости</a></li>
 						<li><a href="#" class="menu__link">Турниры</a></li>
 						<li><a href="#" class="menu__link">Услуги</a></li>
 						<li><a href="#" class="menu__link">Детский теннис</a></li>
