add the page about and into add the gallery-page

--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -10,7 +10,7 @@
 				<li><a href="#" class="menu-footer__link">Детский теннис</a></li>
 				<li><a href="#" class="menu-footer__link">Контакты</a></li>
 				<li><a href="#" class="menu-footer__link">Цены</a></li>
-				<li><a href="#" class="menu-footer__link">О клубе</a></li>
+				<li><a href="about.html" class="menu-footer__link">О клубе</a></li>
 			</ul>
 		</nav>
 		<div class="footer__contacts">
