--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -12,7 +12,7 @@
 						<li><a href="#" class="menu__link">Детский теннис</a></li>
 						<li><a href="#" class="menu__link">Контакты</a></li>
 						<li><a href="#" class="menu__link">Цены</a></li>
-						<li><a href="#" class="menu__link">О клубе</a></li>
+						<li><a href="about.html" class="menu__link">О клубе</a></li>
 					</ul>
 				</nav>
 			</div>
