add the club-section

--- a/src/about.html
+++ b/src/about.html
@@ -54,6 +54,73 @@
 					</div>
 				</div>
 			</section>
+			<section class="page-about__club club-section">
+				<div class="club-section__container _container">
+					<h2 class="club-section__title _title-h2">О клубе</h2>
+					<div class="club-section__wrapper">
+						<div class="club-section__history club-history">
+							<div class="club-history__container">
+								<h2 class="club-history__title _title-h2">
+									Петербургский теннисный клуб имени М.А. Пасечникова
+								</h2>
+								<div class="club-history__text">
+									<p>
+										Feugiat gravida proin arcu tellus ipsum posuere nisl, consectetur scelerisque. Posuere
+										ipsum tellus dignissim etiam lorem ultrices risus viverra. Purus volutpat phasellus
+										viverra vestibulum quis. Gravida pretium odio enim ut id tempus semper. Urna cum at in
+										iaculis mauris at. Tellus, a euismod tincidunt eu orci faucibus. Mi faucibus pellentesque
+										molestie nunc, et, tellus. Neque cras mattis dolor id. Maecenas vivamus tristique donec
+										neque id convallis. Feugiat fusce at est at.
+									</p>
+									<p>
+										Vitae nec eget blandit id nisl. Sit ac dictum lorem mauris posuere sit. Gravida commodo
+										egestas pharetra, mi interdum. Ullamcorper pulvinar hac risus egestas fusce nunc. Vel
+										auctor proin integer ut lacus, sed neque id dictum. At enim quis eu, mattis aliquet varius
+										in eu venenatis.
+									</p>
+									<p>
+										Quisque diam elit donec orci sed dolor. Neque sed sit tortor eget urna magna interdum
+										feugiat ut. In purus rhoncus egestas euismod morbi. Ut velit facilisi in cras tempus
+										turpis sapien ipsum, mattis. Tempor sit nulla ac lorem placerat congue. Nulla purus
+										vestibulum suscipit pellentesque risus non.
+									</p>
+								</div>
+								<div class="club-history__features">
+									<div class="club-history__feature">
+										<div class="club-history__number">
+											<img src="img/about/7.png" alt="Число">
+										</div>
+										<div class="club-history__name">
+											Летних грунтовых кортов
+										</div>
+									</div>
+									<div class="club-history__feature">
+										<div class="club-history__number">
+											<img src="img/about/4.png" alt="Число">
+										</div>
+										<div class="club-history__name">
+											Зимних корта с покрытием «искусственная трава»
+										</div>
+									</div>
+									<div class="club-history__feature">
+										<div class="club-history__number">
+											<img src="img/about/3.png" alt="Число">
+										</div>
+										<div class="club-history__name">
+											Зимних корта с покрытием «hard»
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="club-section__picture">
+							<div class="club-section__image _ibg">
+								<img src="img/about/spbCort.jpg" alt="Теннесист бьет по мячу">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		@@include('html/_footer.html',{})
 	</div>
